--- a/layout/activity_perfil_usuarios.xml
+++ b/layout/activity_perfil_usuarios.xml
@@ -41,7 +41,6 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:text="laura@gmail.com"
                 android:textSize="10pt"
                 android:singleLine="true" />
         </LinearLayout>
@@ -55,16 +54,33 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="7pt"
-        android:text="Ciudad:"
+        android:text="Nombre:"
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/user_city"
+        android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:inputType="text"
-        android:text="Zaragoza"
+        android:textSize="10pt"
+        android:singleLine="true" />
+
+    <TextView
+        android:layout_marginTop="5pt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="7pt"
+        android:text="Apellidos:"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/user_apellidos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:inputType="text"
         android:textSize="10pt"
         android:singleLine="true" />
 
