--- a/layout/activity_perfil.xml
+++ b/layout/activity_perfil.xml
@@ -10,16 +10,16 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_perfil"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -42,22 +42,34 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:text="laura@gmail.com"
                 android:singleLine="true" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ciudad:"
+                android:text="Nombre:"
                 android:visibility="visible" />
 
             <AutoCompleteTextView
-                android:id="@+id/user_city"
+                android:id="@+id/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
                 android:inputType="text"
-                android:text="Zaragoza"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Apelidos:"
+                android:visibility="visible" />
+
+            <AutoCompleteTextView
+                android:id="@+id/user_apellidos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:maxLines="1"
                 android:singleLine="true" />
 
             <TextView
@@ -83,98 +95,97 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:passwordToggleEnabled="true"
-                >
+                app:passwordToggleEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/newPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Repetir nueva contraseña:"
-            android:visibility="visible" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Repetir nueva contraseña:"
+                android:visibility="visible" />
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            >
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/reNewPass"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
-        </android.support.design.widget.TextInputLayout>
+                app:passwordToggleEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/reNewPass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
 
 
-        <TextView
-            android:layout_marginTop="5pt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            android:text="Valoración media:"
-            android:visibility="visible" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5pt"
+                android:text="Valoración media:"
+                android:textSize="7pt"
+                android:textStyle="bold"
+                android:visibility="visible" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <RatingBar
                     android:id="@+id/valoracion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:rating="3.5"
-                    android:layout_alignParentLeft="true"/>
+                    android:layout_alignParentLeft="true"
+                    android:isIndicator="true"
+                    android:numStars="5" />
 
                 <TextView
+                    android:id="@+id/valoracion_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3.3/5"
-                    android:textStyle="bold"
-                    android:textSize="15pt"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:textSize="15pt"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button_cancelar"
+                    android:layout_width="100dp"
+                    android:layout_height="60dp"
+                    android:text="CANCELAR"
+                    android:layout_alignParentLeft="true"/>
+
+                <Button
+                    android:id="@+id/button_eliminar"
+                    android:layout_width="100dp"
+                    android:layout_height="60dp"
+                    android:text="ELIMINAR CUENTA"
+                    android:layout_centerHorizontal="true"/>
+
+                <Button
+                    android:id="@+id/button_guardar"
+                    android:layout_width="100dp"
+                    android:layout_height="60dp"
+                    android:text="GUARDAR"
+                    android:layout_alignParentRight="true"/>
+
 
             </RelativeLayout>
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/button_cancelar"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:text="CANCELAR"
-                android:layout_alignParentLeft="true"/>
-
-            <Button
-                android:id="@+id/button_eliminar"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:text="ELIMINAR CUENTA"
-                android:layout_centerHorizontal="true"/>
-
-            <Button
-                android:id="@+id/button_guardar"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:text="GUARDAR"
-                android:layout_alignParentRight="true"/>
-
-
-        </RelativeLayout>
-
-    </LinearLayout>
+        </LinearLayout>
 
     </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
