--- a/layout/activity_chat.xml
+++ b/layout/activity_chat.xml
@@ -27,18 +27,17 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="6"
                     android:background="@drawable/rounded_corner"
                     android:padding="16dp"
-                    android:text="Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example."
                     android:textColor="#000" />
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/imageView11"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="-15dp"
@@ -47,12 +46,11 @@
                     android:src="@drawable/arrow_bg1" />
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageView12"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="0dp"
-                    android:layout_weight="3"
-                    android:src="@drawable/user_pacific" />
+                    android:layout_weight="3" />
 
             </LinearLayout>
 
@@ -61,36 +59,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/layout1"
-                android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_weight="3"
-                    android:src="@drawable/user_pratikshya" />
-
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="-15dp"
-                    android:layout_marginTop="6.5dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/arrow_bg2" />
-
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="6"
-                    android:background="@drawable/rounded_corner1"
+                    android:background="@drawable/rounded_corner"
                     android:padding="16dp"
-                    android:text="Android charting application xml ui design. Android charting application xml ui design tutorial with example. Android charting application xml ui design. Android charting application xml ui design. "
                     android:textColor="#000" />
+
+                <ImageView
+                    android:id="@+id/imageView21"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="-15dp"
+                    android:layout_marginTop="6.5dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/arrow_bg1" />
+
+                <ImageView
+                    android:id="@+id/imageView22"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="3"/>
 
             </LinearLayout>
 
@@ -110,11 +105,10 @@
                     android:layout_weight="6"
                     android:background="@drawable/rounded_corner"
                     android:padding="16dp"
-                    android:text="Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example."
                     android:textColor="#000" />
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imageView31"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="-15dp"
@@ -123,12 +117,11 @@
                     android:src="@drawable/arrow_bg1" />
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/imageView32"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="0dp"
-                    android:layout_weight="3"
-                    android:src="@drawable/user_pacific" />
+                    android:layout_weight="3" />
 
             </LinearLayout>
 
@@ -137,37 +130,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/layout3"
-                android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_weight="3"
-                    android:src="@drawable/user_pratikshya" />
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="-15dp"
-                    android:layout_marginTop="6.5dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/arrow_bg2" />
-
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="6"
-                    android:background="@drawable/rounded_corner1"
+                    android:background="@drawable/rounded_corner"
                     android:padding="16dp"
-                    android:text="Android charting application xml ui design. Android charting application xml ui design tutorial with example. Android charting application xml ui design. Android charting application xml ui design. "
                     android:textColor="#000" />
+
+                <ImageView
+                    android:id="@+id/imageView41"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="-15dp"
+                    android:layout_marginTop="6.5dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/arrow_bg1" />
+
+                <ImageView
+                    android:id="@+id/imageView42"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="3"/>
+
             </LinearLayout>
+
         </RelativeLayout>
     </ScrollView>
 
